--- a/install/ports/emulab-boss/Makefile
+++ b/install/ports/emulab-boss/Makefile
@@ -24,7 +24,9 @@ MAINTAINER=	testbed-ops@flux.utah.edu
 # We must make sure PERL is built with this.
 #
 .MAKEFLAGS+=	ENABLE_SUIDPERL=yes
-.if (${PORTVERSION} == "3.1" || ${PORTVERSION} == "4.0")
+.if ${PORTVERSION} == "5.0"
+.MAKEFLAGS+=	PERL_VERSION=5.12.4 PERL_VER=5.12.4 PERL_ARCH=mach
+.elif (${PORTVERSION} == "3.1" || ${PORTVERSION} == "4.0")
 .MAKEFLAGS+=	PERL_VERSION=5.10.1 PERL_VER=5.10.1 PERL_ARCH=mach
 .elif ${PORTVERSION} == "3.0"
 .MAKEFLAGS+=	PERL_VERSION=5.10.0 PERL_VER=5.10.0 PERL_ARCH=mach
@@ -48,7 +50,7 @@ MAINTAINER=	testbed-ops@flux.utah.edu
 # agrees with what is in the emulab-ops and emulab-php* metaports.
 #
 .MAKEFLAGS+=	-DWITH_APACHE
-.if ${PORTVERSION} == "4.0"
+.if (${PORTVERSION} == "4.0" || ${PORTVERSION} == "5.0")
 .MAKEFLAGS+=	APACHE_PORT=www/apache22
 .MAKEFLAGS+=	WITH_SUEXEC=yes
 .else
@@ -73,7 +75,7 @@ MAINTAINER=	testbed-ops@flux.utah.edu
 .if (${PORTVERSION} == "1.7" || ${PORTVERSION} == "2.0")
 BUILD_DEPENDS=	\
 	${LOCALBASE}/lib/perl5/site_perl/${PERL_VER}/${PERL_ARCH}/Mysql.pm:${PORTSDIR}/databases/p5-DBD-mysql50
-.elif (${PORTVERSION} == "4.0")
+.elif (${PORTVERSION} == "4.0" || ${PORTVERSION} == "5.0")
 # back to a standard p5-DBD-mysql50 install
 BUILD_DEPENDS=	\
 	${LOCALBASE}/lib/perl5/site_perl/${PERL_VER}/${PERL_ARCH}/DBD/mysql.pm:${PORTSDIR}/databases/p5-DBD-mysql50 \
@@ -97,7 +99,7 @@ LIB_DEPENDS+= lthread.[236]:${PORTSDIR}/devel/linuxthreads
 LIB_DEPENDS+= xerces-c.27:${PORTSDIR}/textproc/xerces-c2
 .endif
 .if ${OSMAJOR} >= 7
-LIB_DEPENDS+= xmlrpc.9:${PORTSDIR}/net/xmlrpc-c
+LIB_DEPENDS+= xmlrpc:${PORTSDIR}/net/xmlrpc-c
 .endif
 
 #
@@ -148,7 +150,7 @@ RUN_DEPENDS+=	\
 	mysqlhotcopy:${PORTSDIR}/databases/mysql50-scripts
 
 # apache related ports
-.if ${PORTVERSION} == "4.0"
+.if (${PORTVERSION} == "4.0" || ${PORTVERSION} == "5.0")
 RUN_DEPENDS+=	\
 	${LOCALBASE}/libexec/apache22/mod_ssl.so:${PORTSDIR}/${APACHE_PORT} \
 	${LOCALBASE}/libexec/apache22/mod_fastcgi.so:${PORTSDIR}/www/mod_fastcgi
@@ -159,7 +161,8 @@ RUN_DEPENDS+=	\
 .endif
 
 # m2crypto port
-.if (${PORTVERSION} == "3.0" || ${PORTVERSION} == "3.1" || ${PORTVERSION} == "4.0")
+.if (${PORTVERSION} == "3.0" || ${PORTVERSION} == "3.1" || \
+     ${PORTVERSION} == "4.0" || ${PORTVERSION} == "5.0")
 # must handle patching of m2crypto when the port is built
 RUN_DEPENDS+=	\
 	${PYTHON_PKGNAMEPREFIX}m2crypto>0:${PORTSDIR}/misc/emulab-py-m2crypto
@@ -170,7 +173,7 @@ RUN_DEPENDS+=	\
 .endif
 
 # dhcpd port
-.if ${PORTVERSION} == "4.0"
+.if (${PORTVERSION} == "4.0" || ${PORTVERSION} == "5.0")
 RUN_DEPENDS+=	\
 	dhcpd:${PORTSDIR}/net/isc-dhcp42-server
 .elif (${PORTVERSION} == "3.1" || ${PORTVERSION} == "3.0")
@@ -182,7 +185,7 @@ RUN_DEPENDS+=	\
 .endif
 
 # misc. old vs. new port stuff
-.if ${PORTVERSION} == "4.0"
+.if (${PORTVERSION} == "4.0" || ${PORTVERSION} == "5.0")
 RUN_DEPENDS+=	\
 	autoconf:${PORTSDIR}/devel/autoconf \
 	libtool:${PORTSDIR}/devel/libtool
