--- a/install/installvars.pm.in
+++ b/install/installvars.pm.in
@@ -40,7 +40,11 @@ $BOSS_PORT = "emulab-boss-1.8";
 $OPS_PORT  = "emulab-ops-1.4"; 
 $FS_PORT   = "emulab-fs-1.4";
 if ($FBSD_MAJOR > 4) {
-    if ($FBSD_MAJOR > 7) {
+    if ($FBSD_MAJOR > 8) {
+	$BOSS_PORT = "emulab-boss-5.0";
+	$OPS_PORT = "emulab-ops-5.0";
+	$FS_PORT = "emulab-fs-5.0";
+    } elsif ($FBSD_MAJOR > 7) {
 	$BOSS_PORT = "emulab-boss-4.0";
 	$OPS_PORT = "emulab-ops-4.0";
 	$FS_PORT = "emulab-fs-4.0";
@@ -68,10 +72,11 @@ $PHP_VERSION = 4;
 $PHP_PORT = "php4-extensions-1.0";
 if ($FBSD_MAJOR > 7 || ($FBSD_MAJOR == 7 && $FBSD_MINOR > 2)) {
     $PHP_VERSION = 5;
-    if ($FBSD_MAJOR > 7) {
+    if ($FBSD_MAJOR > 8) {
+	$PHP_PORT = "php5-extensions-1.6";
+    } elsif ($FBSD_MAJOR > 7) {
 	$PHP_PORT = "php5-extensions-1.4";
-    }
-    else {
+    } else {
 	$PHP_PORT = "php5-extensions-1.3";
     }
 }
@@ -94,7 +99,10 @@ $SELFLOAD_PATCH		= "$main::TOP_SRCDIR/patches/SelfLoader.patch";
 #
 $PYM2_PKG = "py25-m2crypto-0.19.1";
 $PY_VER   = "python2.5";
-if ($FBSD_MAJOR > 7 || ($FBSD_MAJOR == 7 && $FBSD_MINOR > 2)) {
+if ($FBSD_MAJOR > 8) {
+    $PYM2_PKG = "py27-m2crypto-0.21.1";
+    $PY_VER = "python2.7";
+} elsif ($FBSD_MAJOR > 7 || ($FBSD_MAJOR == 7 && $FBSD_MINOR > 2)) {
     $PYM2_PKG = "py26-m2crypto-0.20";
     $PY_VER = "python2.6";
 }
