--- a/ipod/GNUmakefile.in
+++ b/ipod/GNUmakefile.in
@@ -1,6 +1,6 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2002, 2006 University of Utah and the Flux Group.
+# Copyright (c) 2000-2012 University of Utah and the Flux Group.
 # All rights reserved.
 #
 SRCDIR		= @srcdir@
@@ -12,9 +12,12 @@ include $(OBJDIR)/Makeconf
 
 all: ipod apod
 
+# These binaries installed setuid, with sudo. 
+SETUID_SBIN_PROGS    = ipod
+
 # These scripts installed setuid, with sudo. 
 SETUID_BIN_SCRIPTS   = 
-SETUID_SBIN_SCRIPTS  = ipod apod
+SETUID_SBIN_SCRIPTS  = apod
 SETUID_LIBX_SCRIPTS  =
 
 include $(TESTBED_SRCDIR)/GNUmakerules
