--- a/sensors/GNUmakefile.in
+++ b/sensors/GNUmakefile.in
@@ -1,6 +1,6 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2002-2011 University of Utah and the Flux Group.
+# Copyright (c) 2002-2012 University of Utah and the Flux Group.
 # All rights reserved.
 #
 SRCDIR		= @srcdir@
@@ -13,14 +13,20 @@ ISMAINSITE	= @TBMAINSITE@
 include $(OBJDIR)/Makeconf
 
 SUBDIRS	= powermon
-ifeq ($(ISMAINSITE),1)
-SUBDIRS += nfstrace
-endif
 
 SYSTEM            := $(shell uname -s)
 
 ifeq ($(SYSTEM),FreeBSD)
 FBSDVERSION   := $(shell uname -v | sed -e 's/FreeBSD \([0-9]\).*/FreeBSD\1/')
+
+ifeq ($(ISMAINSITE),1)
+# XXX nfstrace broke on FBSD 8 and above right now (uses linuxthreads)
+ifneq ($(FBSDVERSION),FreeBSD8)
+ifneq ($(FBSDVERSION),FreeBSD9)
+SUBDIRS += nfstrace
+endif
+endif
+endif
 
 # XXX not on FreeBSD 5/6 til I get a chance to fix it
 ifeq ($(FBSDVERSION),FreeBSD4)
