More minor cleanups exposed by FBSD9 install.
Bogus param list for AddPerExperimentSwitchStack; can't have scalar args
after a list arg.

Missing mailing list TBERRORSEMAIL in defs-elabinelab. Caused redundant
"testbed-ops" addresses in /etc/aliases.

Weed out said redundant mailing list names when creating aliases during
ops-install.

named.reload script has gone away. Use rndc instead.

--- a/db/libdb.pm.in
+++ b/db/libdb.pm.in
@@ -2574,8 +2574,8 @@ sub GetPerExperimentSwitchStack($) {
 #
 # Add a per-experiment switch stack type, and add switches to that stack.
 #
-sub AddPerExperimentSwitchStack($@;$$$) {
-    my ($expt,@switches,$leader,$snmp_community,$min_vlan,$max_vlan) = @_;
+sub AddPerExperimentSwitchStack($$$$$@) {
+    my ($expt,$leader,$snmp_community,$min_vlan,$max_vlan,@switches) = @_;
     my $scomm = $snmp_community;
 
     my $stack_id = GetPerExperimentSwitchStackName($expt);
