--- a/tbsetup/named_setup.in
+++ b/tbsetup/named_setup.in
@@ -260,16 +260,23 @@ closedir DIR;
 
 #
 # Get the nameserver to reload the zone files.
-# This is better than HUPing the nameserver directly. Notet that we look
+# This is better than HUPing the nameserver directly. Note that we look
 # for a local port of named first.
 #
 if ($restart_named) {
     if (-x "/usr/local/sbin/rndc") {
 	system("/usr/local/sbin/rndc reload > /dev/null") == 0 or
 	    fatal("/usr/local/sbin/rndc reload failed!\n");
-    } else {
-	system("named.reload > /dev/null") == 0 or
-	    fatal("named.reload failed!\n");
+    }
+    # XXX named.reload went away circa FBSD 9
+    elsif (-x "/usr/sbin/named.reload") {
+	system("/usr/sbin/named.reload > /dev/null") == 0 or
+	    fatal("/usr/sbin/named.reload failed!\n");
+    }
+    # try standard rndc
+    else {
+	system("/usr/sbin/rndc reload > /dev/null") == 0 or
+	    fatal("/usr/sbin/rndc failed!\n");
     }
 }
 TBScriptUnlock();
