A little more scrutiny of the target directory in runsuid.
Also, get rid of message about "you must run post-install".

--- a/security/GNUmakefile.in
+++ b/security/GNUmakefile.in
@@ -51,11 +51,9 @@ genlastlog:	genlastlog.c
 
 install: $(addprefix $(INSTALL_LIBEXECDIR)/, $(BINS)) \
 	$(addprefix $(INSTALL_SBINDIR)/, $(SBINS))
-	@echo "Don't forget to do a post-install as root"
 
 post-install:
-	chown root $(INSTALL_LIBEXECDIR)/suexec
-	chmod u+s $(INSTALL_LIBEXECDIR)/suexec
+	@echo "post-install no longer required"
 
 #
 # Control node installation (okay, plastic)
