Fix a typo, appending a "}" on the end of an event group name.

--- a/db/Experiment.pm.in
+++ b/db/Experiment.pm.in
@@ -3793,7 +3793,7 @@ sub SetupNetworkAgents($)
 	    $groupname = "${bridgename}-tracemon";
 	}
 	else {
-	    $groupname = "${vlanname}-tracemon}";
+	    $groupname = "${vlanname}-tracemon";
 	}
 	DBQueryFatal("insert into event_groups ".
 		     " (exptidx, pid, eid, idx, group_name, agent_name) ".
