Add support for 1000Mb inner control net via TBCOMPAT::elabinelab_cnetspeed.
Note that this only makes sense for singlenet==0 where we can control the
speed of the inner elab control network.

--- a/tbsetup/ns2ir/tb_compat.tcl.in
+++ b/tbsetup/ns2ir/tb_compat.tcl.in
@@ -131,6 +131,7 @@ namespace eval TBCOMPAT {
     variable elabinelab_nodeos
     variable elabinelab_source_tarfile ""
     variable elabinelab_tarfiles
+    variable elabinelab_cnetspeed 0
 
     # Elabinelab attribute stuff.
     variable elabinelab_attributes
