Changes to make Emulab play nicely with systemd
In some cases systemd doesn't like our behavior of starting emulab services
from rc.local and killing them from the testbed service.  There's really no
reason to be doing it this way under systemd anyway, so make the testbed
service do both.

--- a/clientside/tmcc/fedora15/GNUmakefile.in
+++ b/clientside/tmcc/fedora15/GNUmakefile.in
@@ -77,6 +77,8 @@ etc-install:	dir-install sysetc-remove sysetc-install
 	$(INSTALL) -m 644 $(SRCDIR)/passwd $(ETCDIR)/passwd
 	$(INSTALL) -m 600 $(SRCDIR)/shadow $(ETCDIR)/shadow
 	$(INSTALL) -m 600 $(SRCDIR)/gshadow $(ETCDIR)/gshadow
+	$(INSTALL) -m 755 $(SRCDIR)/rc.local $(ETCDIR)/rc.d/rc.local
+	$(INSTALL) -m 755 $(SRCDIR)/testbed $(ETCDIR)/rc.d/init.d/testbed
 	@echo "fedora-specific etc-install done"
 
 sysetc-install:	ifcfgs dir-install
