--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -1,6 +1,6 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2011 University of Utah and the Flux Group.
+# Copyright (c) 2000-2012 University of Utah and the Flux Group.
 # All rights reserved.
 #
 # Testbed Makefile
@@ -231,19 +231,7 @@ endif
 TARBALLDESTDIR = /var/tmp/emulab-client
 
 client-tarball:
-	@if [ `id -u` -ne 0 ]; then \
-	    echo '*** Must run as root!'; \
-	    false; \
-	fi
-	@if [ -d "$(TARBALLDESTDIR)" ]; then \
-	    echo "$(TARBALLDESTDIR) already exists."; \
-	    echo "Remove it and try again."; \
-	    false; \
-	fi
-	echo "Building and installing client-side in $(TARBALLDESTDIR)..."
-	DESTDIR=$(TARBALLDESTDIR) $(MAKE) client-install
-	echo "Creating tarball..."
-	tar czf emulab-client.tar.gz -C $(TARBALLDESTDIR) .
+	@$(MAKE) -C clientside client-tarball
 
 client-src-tarball:
 	@rm -f emulab-client-src.tar.gz
