--- a/clientside/GNUmakefile.in
+++ b/clientside/GNUmakefile.in
@@ -1,6 +1,6 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2011 University of Utah and the Flux Group.
+# Copyright (c) 2000-2012 University of Utah and the Flux Group.
 # All rights reserved.
 #
 SRCDIR		= @srcdir@
@@ -37,6 +37,22 @@ mfs:		mfs-subdirs
 mfs-install:	client-mkdirs mfs-install-subdirs
 frisbee-mfs:	frisbee-mfs-subdirs
 frisbee-mfs-install:	client-mkdirs frisbee-mfs-install-subdirs
+
+TARBALLDESTDIR = /var/tmp/emulab-client
+client-tarball:
+	@if [ `id -u` -ne 0 ]; then \
+	    echo '*** Must run as root!'; \
+	    false; \
+	fi
+	@if [ -d "$(TARBALLDESTDIR)" ]; then \
+	    echo "$(TARBALLDESTDIR) already exists."; \
+	    echo "Remove it and try again."; \
+	    false; \
+	fi
+	echo "Building and installing client-side in $(TARBALLDESTDIR)..."
+	DESTDIR=$(TARBALLDESTDIR) $(MAKE) client-install
+	echo "Creating tarball..."
+	tar czf emulab-client.tar.gz -C $(TARBALLDESTDIR) .
 
 client-mkdirs:
 	-mkdir -p $(DESTDIR)$(CLIENT_BINDIR)
