Define some additional configure vars in the clientside configure.
Against my better judgement, use configure to set some vars in clientside
scripts. I try to avoid this to keep our client images from becoming Utah
specific.

This is specifically for run_linktest.pl.in, which is installed on both
ops and nodes. I could fix it to not use configure vars on nodes, but that
would break its primary use on ops.

OTOH, I fixed elab_linktest.pl.in to not use configure variables, since
it only runs on nodes.

--- a/clientside/configure.in
+++ b/clientside/configure.in
@@ -83,6 +83,14 @@ CLIENT_BINDIR="/usr/local/etc/emulab"
 CLIENT_VARDIR="/var/emulab"
 CLIENT_MANDIR="/usr/local/man"
 
+# XXX compat. We have no business expanding these on the client side!
+AC_SUBST(PROJROOT_DIR)
+AC_SUBST(EVENTSERVER)
+AC_SUBST(NOSHAREDFS)
+PROJROOT_DIR="/proj"
+EVENTSERVER="event-server"
+NOSHAREDFS=0
+
 TBLOGFACIL="local5"
 LOG_TESTBED=`echo "LOG_$TBLOGFACIL" | tr a-z A-Z`
 AC_DEFINE_UNQUOTED(LOG_TESTBED, $LOG_TESTBED)
