--- a/protogeni/lib/GeniCertificate.pm.in
+++ b/protogeni/lib/GeniCertificate.pm.in
@@ -150,7 +150,8 @@ sub email($)
 {
     my ($self) = @_;
 
-    if ($self->DN() =~ /\/emailAddress=(.*)/ ||
+    if ($self->DN() =~ /emailAddress=([A-Z0-9._%-]+@[A-Z0-9.-]+\.[A-Z]{2,4})/i ||
+        $self->DN() =~ /\/emailAddress=(.*)/ ||
 	$self->DN() =~ /^emailAddress=(.*),/) {
 	return $1
 	    if ($1 ne "");
