Make broadcast mode work with master server.
I had never completed this. Two things to note:

1. Distribution via broadcast is still disabled by default in the master
   server. To enable it, see the comment added in 3.mfrisbeed.sh.in.
   To use broadcast by default in the client, see the comment in rc.frisbee.

2. If you specify broadcast (-b) in either the client or server, then you
   should use "-m 255.255.255.255". However, this will broadcast to ALL
   interfaces on the client/server. To limit to a specific interface, also
   include "-i <interface-IP>". This will tell the client/server to look up
   that interface and use the subnet broadcast address in place of
   255.255.255.255. Since the master server always starts up frisbeed
   instances with -i, broadcast will always be directed on the server.
   Since our rc.frisbee script also fires up the client with -i, it will
   likewise be directed.

--- a/rc.d/3.mfrisbeed.sh.in
+++ b/rc.d/3.mfrisbeed.sh.in
@@ -68,6 +68,8 @@ fi
 echo -n " mfrisbeed"
 rm -f /var/run/frisbeed-*.pid
 args="-C emulab -i @BOSSNODE_IP@"
+# to allow broadcast, uncomment the following line
+#args="$args -x ucast,mcast,bcast"
 # if an inner elab, use outer boss as our parent
 if [ -n "@OUTERBOSS_NODENAME@" ]; then
     args="$args -S @OUTERBOSS_NODENAME@"
