--- a/db/Image.pm.in
+++ b/db/Image.pm.in
@@ -555,6 +555,7 @@ sub GetGroup($)
 sub AccessCheck($$$)
 {
     my ($self, $user, $access_type) = @_;
+    require Group;
 
     # Must be a real reference. 
     return 0
@@ -657,7 +658,7 @@ sub AccessCheck($$$)
 		if ($allow_write);
 	}
     }
-    my $trust_none = TBDB_TRUSTSTRING_NONE();
+    my $trust_none = $Group::MemberShip::TRUSTSTRING_NONE;
     $query_result = 
 	DBQueryFatal("select allow_write from group_membership as g ".
 		     "left join image_permissions as p on ".
