Fix a few more suexec invoked setuid scripts.

--- a/bugdb/GNUmakefile.in
+++ b/bugdb/GNUmakefile.in
@@ -1,6 +1,6 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2008 University of Utah and the Flux Group.
+# Copyright (c) 2000-2012 University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -20,7 +20,7 @@ CTRL_SBIN_SCRIPTS	= bugdbproxy bugdbgateway exporttickets
 # These scripts installed setuid, with sudo. 
 SETUID_BIN_SCRIPTS   = 
 SETUID_SBIN_SCRIPTS  = addbugdbproj addbugdbuser setbugdbgroups 
-SETUID_LIBX_SCRIPTS  = bugdbxlogin
+SETUID_SUEXEC_SCRIPTS  = bugdbxlogin
 
 #
 # Force dependencies on the scripts so that they will be rerun through
