Add support for remote telnet-based console servers.
We already supported "remote mode" (-m) which told capture that the
device command line argument was of the form "host:port". Extended that
to "host:port,protocol" where protocol can be "raw" (aka, the current
remote mode) or "telnet". Telnet support is provided through the libtelnet
library (http://github.com/elanthis/libtelnet) which I created a FreeBSD
port for in install/ports. Most of the work was just breaking out some
code in the monster select loop.

Only tested on the Linux Networx "icebox" and only very lightly. The set
of telnet want/won't/do/don't options may not be correct, but it seems to
work.

Also cleaned up some lint.

--- a/capture/GNUmakefile.in
+++ b/capture/GNUmakefile.in
@@ -1,6 +1,6 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2011 University of Utah and the Flux Group.
+# Copyright (c) 2000-2012 University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -12,6 +12,10 @@ SUBDIR		= capture
 SYSTEM	       := $(shell uname -s)
 
 include $(OBJDIR)/Makeconf
+
+# For console server boxes that speak telnet.
+# Requires libtelnet, see install/ports/libtelnet for a FreeBSD port
+WITH_TELNET	= 0
 
 all:		boss-all tipserv-all
 boss-all:	capserver
@@ -38,6 +42,10 @@ LIBS     += -lkrb5support
 endif
 endif
 LIBS	 += -ldl -lz
+endif
+ifeq ($(WITH_TELNET),1)
+CFLAGS	+= -DWITH_TELNET -I/usr/local/include
+LIBS	+= -L/usr/local/lib -ltelnet
 endif
 
 capture: capture.c capdecls.h
